<resources>
    <string name="app_name">Reflect</string>
    <string name="action_settings">Settings</string>
    <string name="activity_fab">Add New Module</string>
    <string name="activity_settings">Settings</string>
    <string name="module_calendar">Calendar</string>
    <string name="module_clock">Clock</string>
    <string name="module_compliments">Compliments</string>
    <string name="module_currentweather">CurrentWeather</string>
    <string name="module_news">News</string>
    <string name="module_weatherforecast">Weather</string>
    <string name="add_compliment">Add a new compliment!</string>
    <string name="clarity">Clarity</string>
    <string name="textview_text">SeekBarPreference test</string>
    <string name="menu_settings">Settings</string>
    <string name="settings_dialog_message">Here comes a message</string>
    <string name="settings_summary">Current value is $1</string>
    <string name="settings_unit">Km</string>
    <string name="settings_title">Here comes the title</string>
</resources>
