<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:orientation="vertical"
            tools:context="com.example.android.reflect.MainActivity">

            <!--
            <TextView
                android:id="@+id/clock"
                android:style="@style/CategoryStyle"
                android:background="@drawable/rounded_corner"
                android:text="@string/module_clock" />
               -->

                <FrameLayout
                    android:id="@+id/calendar"
                    android:background="@drawable/rounded_corner"
                    style="@style/ModuleStyle">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Switch
                            android:id="@+id/switch_calendar"
                            style="@style/SwitchCompatStyle"
                            android:checked="true" />

                        <TextView
                            style="@style/ModuleText"
                            android:text="Calendar" />


                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/clock"
                    android:background="@drawable/rounded_corner"
                    style="@style/ModuleStyle">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Switch
                            android:id="@+id/switch_clock"
                            style="@style/SwitchCompatStyle"
                            android:checked="true" />

                        <TextView
                            style="@style/ModuleText"
                            android:text="@string/module_clock" />


                    </LinearLayout>
                </FrameLayout>



<!--
            <TextView
                android:id="@+id/newsfeed"
                style="@style/CategoryStyle"
                android:background="@drawable/rounded_corner"
                android:text="@string/module_newsfeed" />

            <TextView
                android:id="@+id/weather"
                style="@style/CategoryStyle"
                android:background="@drawable/rounded_corner"
                android:text="@string/module_weather" />
-->


            <FrameLayout
                android:id="@+id/compliments"
                android:background="@drawable/rounded_corner"
                style="@style/ModuleStyle">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/switch_compliments"
                        style="@style/SwitchCompatStyle"
                        android:checked="true" />

                    <TextView
                        style="@style/ModuleText"
                        android:text="@string/module_compliments" />


                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/currentweather"
                android:background="@drawable/rounded_corner"
                style="@style/ModuleStyle">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/switch_currentweather"
                        style="@style/SwitchCompatStyle"
                        android:checked="true" />

                    <TextView
                        style="@style/ModuleText"
                        android:text="@string/module_currentweather" />


                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/newsfeed"
                android:background="@drawable/rounded_corner"
                style="@style/ModuleStyle">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/switch_newsfeed"
                        style="@style/SwitchCompatStyle"
                        android:checked="true" />

                    <TextView
                        style="@style/ModuleText"
                        android:text="@string/module_news" />


                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/weatherforecast"
                android:background="@drawable/rounded_corner"
                style="@style/ModuleStyle">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Switch
                        android:id="@+id/switch_weatherforecast"
                        style="@style/SwitchCompatStyle"
                        android:checked="true" />

                    <TextView
                        style="@style/ModuleText"
                        android:text="@string/module_weatherforecast" />


                </LinearLayout>
            </FrameLayout>



            <!--           <TextView
                           android:id="@+id/fitbit"
                           style="@style/CategoryStyle"
                           android:background="@drawable/rounded_corner"
                           android:text="@string/module_fitbit" />

                       <TextView
                           android:id="@+id/nokia"
                           style="@style/CategoryStyle"
                           android:background="@drawable/rounded_corner"
                           android:text="@string/module_nokia" />

                       <TextView
                           android:id="@+id/remotecontrol"
                           style="@style/CategoryStyle"
                           android:background="@drawable/rounded_corner"
                           android:text="@string/module_remotecontrol" /> -->

        </LinearLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>